updated tex layout

--- a/Latex/thesis.tex
+++ b/Latex/thesis.tex
@@ -111,7 +111,7 @@
 %	LITERATURE REVIEW
 %----------------------------------------------------------------------------------------
 
-\section{Literature Review}
+\section{Related Work}
 
 %Literature review of state of the art papers
 
@@ -119,6 +119,18 @@
 % 		- who do something similar
 %		- who are competitors
 %		- who provide background
+
+\subsection{Fluid Simulation}
+
+\subsubsection{}
+
+\subsubsection{}
+
+\subsection{Point Clouds}
+
+\subsubsection{Collision Detection}
+
+\subsubsection{Scalability}
 
 %----------------------------------------------------------------------------------------
 %	BACKGROUND
