--- a/Latex/thesis.tex
+++ b/Latex/thesis.tex
@@ -101,12 +101,42 @@
 
 \section{Introduction}
 
+%\begin{itemize}
+%\item Problem/challenge
+%\item Why in general is this challenge not solved so far
+%\item What does it contribute to the field
+%\item How are we going to solve it (abstract way)
+%\end{itemize}
+
+%Challenge
+Point clouds have become more and more popular to describe real life objects en scenes. (Find out exactly how they are being made and say something about it).
+
+%Why aren't point clouds being used as of yet
+Some of the reasons why point clouds aren't being used in fluid simulations yet are: 
 \begin{itemize}
-\item Problem/challenge
-\item Why in general is this challenge not solved so far
-\item What does it contribute to the field
-\item How are we going to solve it (abstract way)
+\item Point clouds from landscapes and coastlines usually contain several thousands to millions of points. Thus resulting in a lot of computation time, even for simple operations.
+\item (more reasons, like availability, lack of research into use of point clouds)
+\item (when they are getting used they use the reconstructed meshes. along the same line: Meshes are easier to use, as in more research and methods exist)
 \end{itemize}
+
+%Why it is beneficial to use them
+
+
+%How we are going to solve it:
+We present a novel way to use point clouds in flood simulation. In our simulation we use the original point cloud or one derived from it to compute a flood simulation. 
+
+\subsection{Challenges}
+
+\subsection{Research Question}
+
+\subsection{Contributions}
+Our contributions are: (finalized at the end for now a sort of goal for this thesis)
+\begin{itemize}
+\item An optimized way to scale down point clouds to a more usable size in flood simulations, while still maintaining good enough detail
+\item Highly optimized flood simulation based upon the Lagrangian method which uses a point cloud for the scene.
+\item a fast collision detection method between particles(points) and point clouds.
+\end{itemize}
+
 %----------------------------------------------------------------------------------------
 %	LITERATURE REVIEW
 %----------------------------------------------------------------------------------------
