Looked at different optimizations of point clouds. Found 3 mayor ones, next step is to find papers which explain them and write the part about the optimization (for tomorrow)

--- a/Latex/thesis.tex
+++ b/Latex/thesis.tex
@@ -160,7 +160,16 @@ Our contributions are: (finalized at the end for now a sort of goal for this the
 
 \subsubsection{Collision Detection}
 
+
 \subsubsection{Scalability}
+ (first explain the different types of scaling down the amount of particles, including papers which do it/explain the method)
+\begin{itemize}
+\item Octree
+\item Range
+\item Interpolation
+\end{itemize}
+
+(maybe explain something about parallelism and point clouds)
 
 %----------------------------------------------------------------------------------------
 %	BACKGROUND
