Some progress (too little for my own taste)

--- a/Latex/thesis.tex
+++ b/Latex/thesis.tex
@@ -134,7 +134,7 @@ Point clouds have become more and more popular to describe real life objects en 
 %Why aren't point clouds being used as of yet
 Some of the reasons why point clouds aren't being used in fluid simulations yet are: 
 \begin{itemize}
-\item Point clouds from landscapes and coastlines usually contain several thousands to millions of points. Thus resulting in a lot of computation time, even for simple operations.
+\item Point clouds from landscapes and coastlines usually contain several thousands to millions of points. Thus resulting in a lot of computation time, which makes them impractical for usage in fluid simulation compared to normal scenes consistent of mesh objects.
 \item (more reasons, like availability, lack of research into use of point clouds)
 \item (when they are getting used they use the reconstructed meshes. along the same line: Meshes are easier to use, as in more research and methods exist)
 \end{itemize}
