--- a/Latex/bib.bib
+++ b/Latex/bib.bib
@@ -1,37 +1,20 @@
-@article{chevalier2006effect,
-  title={The effect of word of mouth on sales: Online book reviews},
-  author={Chevalier, Judith A and Mayzlin, Dina},
-  journal={Journal of marketing research},
-  volume={43},
-  number={3},
-  pages={345--354},
-  year={2006},
-  publisher={American Marketing Association}
-}
-
-@inproceedings{ott2012estimating,
-  title={Estimating the prevalence of deception in online review communities},
-  author={Ott, Myle and Cardie, Claire and Hancock, Jeff},
-  booktitle={Proceedings of the 21st international conference on World Wide Web},
-  pages={201--210},
-  year={2012},
-  organization={ACM}
-}
-
-@inproceedings{ott2013estimating,
-  title={Negative Deceptive Opinion Spam},
-  author={Ott, Myle and Cardie, Claire and Hancock, Jeff},
-  booktitle={Proceedings of NAACL-HLT 2013},
-  pages={497--501},
+@article{elseberg2013one,
+  title={One billion points in the cloud--an octree for efficient processing of 3D laser scans},
+  author={Elseberg, Jan and Borrmann, Dorit and N{\"u}chter, Andreas},
+  journal={ISPRS Journal of Photogrammetry and Remote Sensing},
+  volume={76},
+  pages={76--88},
   year={2013},
-
+  publisher={Elsevier}
 }
 
-@inproceedings{ott2011finding,
-  title={Finding deceptive opinion spam by any stretch of the imagination},
-  author={Ott, Myle and Choi, Yejin and Cardie, Claire and Hancock, Jeffrey T},
-  booktitle={Proceedings of the 49th Annual Meeting of the Association for Computational Linguistics: Human Language Technologies-Volume 1},
-  pages={309--319},
-  year={2011},
-  organization={Association for Computational Linguistics}
+@inproceedings{klein2004point,
+  title={Point cloud collision detection},
+  author={Klein, Jan and Zachmann, Gabriel},
+  booktitle={Computer Graphics Forum},
+  volume={23},
+  number={3},
+  pages={567--576},
+  year={2004},
+  organization={Wiley Online Library}
 }
