added one paper on point clouds. Progress on related work of point cloud scalability

--- a/Latex/bib.bib
+++ b/Latex/bib.bib
@@ -18,3 +18,31 @@
   year={2004},
   organization={Wiley Online Library}
 }
+
+@inproceedings{elseberg2011efficient,
+  title={Efficient processing of large 3d point clouds},
+  author={Elseberg, Jan and Borrmann, Dorit and N{\"u}chter, Andreas},
+  booktitle={Information, Communication and Automation Technologies (ICAT), 2011 XXIII International Symposium on},
+  pages={1--7},
+  year={2011},
+  organization={IEEE}
+}
+
+@article{lee2001data,
+  title={Data reduction methods for reverse engineering},
+  author={Lee, KH and Woo, H and Suk, T},
+  journal={The International Journal of Advanced Manufacturing Technology},
+  volume={17},
+  number={10},
+  pages={735--743},
+  year={2001},
+  publisher={Springer}
+}
+
+@inproceedings{eckart2016accelerated,
+  title={Accelerated Generative Models for 3D Point Cloud Data.},
+  author={Eckart, Benjamin and Kim, Kihwan and Troccoli, Alejandro J and Kelly, Alonzo and Kautz, Jan},
+  booktitle={CVPR},
+  pages={5497--5505},
+  year={2016}
+}
