--- a/Latex/thesis.tex
+++ b/Latex/thesis.tex
@@ -16,6 +16,8 @@
 \usepackage{amssymb}
 \usepackage{float}
 \usepackage{multirow}
+\usepackage[square]{natbib}
+
 %----------------------------------------------------------------------------------------
 %	HEADER & FOOTER
 %----------------------------------------------------------------------------------------
@@ -194,9 +196,9 @@ When it comes to fluids in simulations there are two main approaches: Eulerian a
 
 As said before, point clouds are becoming more and more available. This is largely due to the developments in scanners and computers. Scanners are being more for less money, while they increase in precision and decrease in size. The size decrease allows them to be mounted on vehicles such as: airplanes, helicopters, and even vans. And the increased precision allows for more accurate and more meaningful simulations and other appliances, such as digitizing objects and buildings. 
 
-But increased precision comes at the cost of increased amounts of data which are difficult to deal with. When it comes to handling huge amount of points there are two main methods: Scaling down the amount of points through sampling or use data structures such as kD-trees and Octrees \cite{elseberg2013one}. 
+But increased precision comes at the cost of increased amounts of data which are difficult to deal with. When it comes to handling huge amount of points there are two main methods: Scaling down the amount of points through sampling or use data structures such as kD-trees and Octrees \citep{elseberg2013one}. 
 
-However both methods are not perfect. For example when we sample the point cloud we get decreased accuracy which makes it impossible to run accurate simulations on the data, and when we use trees our computation time for (handelingen) goes up, which makes it hard to achieve an interactive application.  Do note that using a tree does decrease the time needed to interact with the point cloud, but thanks to the cheer amount of points and in relation nodes in the tree, it still takes to long for interactive usage. That's why in most cases a combination of the two gets used, with on each level of a tree a sampled representation of the point cloud. This makes it possible to stop when we are spending too much time on one pass through the tree and also return an usable result \cite{klein2004point}.
+However both methods are not perfect. For example when we sample the point cloud we get decreased accuracy which makes it impossible to run accurate simulations on the data, and when we use trees our computation time for (handelingen) goes up, which makes it hard to achieve an interactive application.  Do note that using a tree does decrease the time needed to interact with the point cloud, but thanks to the cheer amount of points and in relation nodes in the tree, it still takes to long for interactive usage. That's why in most cases a combination of the two gets used, with on each level of a tree a sampled representation of the point cloud. This makes it possible to stop when we are spending too much time on one pass through the tree and also return an usable result \citep{klein2004point}.
 
 In the following sections we will go more into detail on which methods are available and which are of use to us.
  
@@ -205,33 +207,33 @@ In the following sections we will go more into detail on which methods are avail
 
 As previously discussed there are two distinct ways to deal with massive amounts of data: Sampling and the use of data structures such as trees.
 
-When it comes to sampling there are many different methods which can be used, but not all of them are applicable to point clouds. In Lee et al\cite{lee2001data}  two of these methods get explained and tested against some other methods.
+When it comes to sampling there are many different methods which can be used, but not all of them are applicable to point clouds. In Lee et al\citep{lee2001data}  two of these methods get explained and tested against some other methods.
 \begin{itemize}
 \item Uniform grids: After creating a 2D uniform grid spanning the point cloud they pick the median point to represent all points in the grid square.
 \item Non-uniform grids: Same principle as with the uniform grid but now they take into account the amount of points, in order to prevent the loss of corners and other details.
 \item Uniform sampling (hinted at in paper)
 \item Chordal deviation sampling (hinted at in paper)
 \end{itemize}
-For a more detailed explanation and test restults we refer to Lee et al \cite{lee2001data}.
+For a more detailed explanation and test restults we refer to Lee et al \citep{lee2001data}.
 
-Klein et al \cite{klein2004point} proposes a method which combines multilevel sampling with an octree. On each layer of the octree we have a few point and a circle representing the original surface/point cloud. So the lower we get in the octree the more precise the representation will be. This layered system allows them to stop at any moment and generate an usable result. This is very useful when we are trying to create an interactive application, since we can stop we have spend too much time collision checking.
+Klein et al \citep{klein2004point} proposes a method which combines multilevel sampling with an octree. On each layer of the octree we have a few point and a circle representing the original surface/point cloud. So the lower we get in the octree the more precise the representation will be. This layered system allows them to stop at any moment and generate an usable result. This is very useful when we are trying to create an interactive application, since we can stop we have spend too much time collision checking.
 
 
-Combining the above methods with the knowledge that we will need a tree for both the collision detection of the simulation and for scaling down the points even more, it is smart to combine these two to save on precomputing times.The smart choice will than be the method proposed by Klein et al \cite{klein2004point}. Another benefit this method adds is the possibility to stop anywhere in the tree and still return a result, which is beneficial for a interactive application.
+Combining the above methods with the knowledge that we will need a tree for both the collision detection of the simulation and for scaling down the points even more, it is smart to combine these two to save on precomputing times.The smart choice will than be the method proposed by Klein et al \citep{klein2004point}. Another benefit this method adds is the possibility to stop anywhere in the tree and still return a result, which is beneficial for a interactive application.
 
 
 (Octrees)
 
 
-\cite{elseberg2011efficient}
+\citep{elseberg2011efficient}
 
-\cite{elseberg2013one}
+\citep{elseberg2013one}
 
-\cite{schnabel2006octree}
+\citep{schnabel2006octree}
 
 (different methods)
 
-\cite{eckart2016accelerated}
+\citep{eckart2016accelerated}
 
 \subsubsection{Collision Detection}
 (Explain collision detection)
@@ -272,7 +274,7 @@ Combining the above methods with the knowledge that we will need a tree for both
 %Meer informatie hierover volgt in blok 5 van jaar 1.
 
 \nocite{*}
-\bibliographystyle{acm}
+\bibliographystyle{ACM-Reference-Format-Journals}
 %\bibliographystyle{apalike}
 \bibliography{bib}
 
